--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BCSIR Air Quality Monitoring Dashboard</title>
+  <title>BCSIR Air Quality Dashboard</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
     :root {
@@ -68,16 +68,9 @@
       gap: 10px;
     }
 
-    .logo-icon {
-      font-size: 24px;
-      color: var(--secondary);
-      animation: pulse 2s infinite;
-    }
-
-    @keyframes pulse {
-      0% { transform: scale(1); }
-      50% { transform: scale(1.1); }
-      100% { transform: scale(1); }
+    .logo-image {
+      height: 40px;
+      width: auto;
     }
 
     .logo-text {
@@ -158,7 +151,7 @@
       border-radius: 20px;
       margin-bottom: 15px;
       transition: var(--transition);
-      color: #2c3e50 !important; /* Changed from white to dark blue */
+      color: #2c3e50 !important;
       box-shadow: 0 2px 8px rgba(0,0,0,0.1);
       border: 2px solid rgba(255,255,255,0.3);
     }
@@ -287,7 +280,7 @@
       font-size: 14px;
       color: #777;
       margin-bottom: 8px;
-      font-weight: bold; /* Made pollutant names bold */
+      font-weight: bold;
     }
 
     .pollutant-value {
@@ -348,6 +341,14 @@
         align-items: center;
         gap: 5px;
       }
+      
+      .logo-text {
+        font-size: 18px;
+      }
+      
+      .logo-image {
+        height: 32px;
+      }
     }
   </style>
 </head>
@@ -355,8 +356,9 @@
   <header>
     <div class="header-content">
       <div class="logo">
-        <div class="logo-icon"><i class="fas fa-wind"></i></div>
-        <div class="logo-text">BCSIR Air Quality Dashboard</div>
+        <!-- Replace the src with your actual logo URL or path -->
+        <img src="Logo-BCSIR-Final.png" alt="BCSIR Logo" class="logo-image">
+        <div class="logo-text">Air Quality Dashboard</div>
       </div>
       <div class="header-controls">
         <div id="last-updated" class="last-updated">Last updated: <span class="loading"></span></div>
