Updated colour code and edited 2023 to 2025

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       --moderate: #FFFF00;
       --sensitive: #FF7E00;
       --unhealthy: #FF0000;
-      --very-unhealthy: #99004C;
-      --hazardous: #7E0023;
+      --very-unhealthy: #800080;
+      --hazardous: #800000;
       --light-bg: #f8f9fa;
       --card-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
       --transition: all 0.3s ease;
@@ -463,7 +463,7 @@
   </div>
 
   <footer>
-    <p>BCSIR Air Quality Monitoring System &copy; 2023 | Data updates every 15 seconds</p>
+    <p>BCSIR Air Quality Monitoring System &copy; 2025 | Data updates every 15 seconds</p>
   </footer>
 
   <script>
