--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
       <div class="logo">
         <!-- Replace the src with your actual logo URL or path -->
         <img src="Logo-BCSIR-Final.png" alt="BCSIR Logo" class="logo-image">
-        <div class="logo-text">Air Quality Dashboard</div>
+        <div class="logo-text">BCSIR Air Quality Monitoring System</div>
       </div>
       <div class="header-controls">
         <div id="last-updated" class="last-updated">Last updated: <span class="loading"></span></div>
