--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       --primary: #2c3e50;
       --secondary: #3498db;
       --good: #00E400;
-      --moderate: #FFFF00;
+      --moderate: #eec732;
       --sensitive: #FF7E00;
       --unhealthy: #FF0000;
       --very-unhealthy: #800080;
@@ -151,7 +151,7 @@
       border-radius: 20px;
       margin-bottom: 15px;
       transition: var(--transition);
-      color: #2c3e50 !important;
+      color: #010101 !important;
       box-shadow: 0 2px 8px rgba(0,0,0,0.1);
       border: 2px solid rgba(255,255,255,0.3);
     }
